--- a/_data/places.yml
+++ b/_data/places.yml
@@ -1,10 +1,10 @@
 - name:	Jordi Pagès
-  address:	'Carrer Pous i Pagès, 10, 17600 Figueres, Girona'
+  address:	'Carrer Eduard Marquina, 44 17488, Cadaqués'
   url:	https://jordipages.github.io/
   twitter:	
-  facebook:	
-  phone: '0034937486090'
-  email: info@Jordi Pagès.com
+  facebook:	https://www.facebook.com/jordi.pagesmorera
+  phone: '0034689168919'
+  email: info@jordipages.cat
   latitude: 42.2556224
   longitude: 2.9675415
   id: 2
