Afegit el CNAME.

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: 'Jordi Pagès'
 email: rgil@oxygen.cat
 description: 'Jordi Pagès és un artista de Granollers (1951) amb una forta empremta a Cadaqués.'
 baseurl:
-url: "https://jordipages.github.io" 
+url: "http://www.jordipages.cat" 
 twitter_username: freecates
 github_username:  freecates
 twitter:          artinpocket
