--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: 'Jordi Pagès'
 email: rgil@oxygen.cat
 description: 'Jordi Pagès és un artista de Granollers (1951) amb una forta empremta a Cadaqués.'
 baseurl:
-url: "http://www.jordipages.cat" 
+url: "https://www.jordipages.cat" 
 twitter_username: freecates
 github_username:  freecates
 twitter:          artinpocket
@@ -31,7 +31,7 @@ markdown: kramdown
 #Custom vars
 portfoli-author:
  name: "Jordi Pagès"
- url: http://www.jordipages.cat/
+ url: https://www.jordipages.cat/
 organitza:
   artinpocket:
     description:  "Artinpocket - organitzadors de Jordi Pagès"
