--- a/_data/places.yml
+++ b/_data/places.yml
@@ -1,6 +1,6 @@
 - name:	Jordi Pagès
   address:	'Carrer Eduard Marquina, 44 17488, Cadaqués'
-  url:	http://www.jordipages.cat/
+  url:	https://www.jordipages.cat/
   twitter:	
   facebook:	https://www.facebook.com/jordi.pagesmorera
   phone: '0034689168919'
