--- a/_data/obres/ferraterobrajordipages.yml
+++ b/_data/obres/ferraterobrajordipages.yml
@@ -31,7 +31,7 @@
     on_sale: false
     weight: null
     dimensions: 
-      length: ""
+      length: "70"
       width: "70"
       height: "50"
       unit: "cm"
@@ -109,7 +109,7 @@
     on_sale: false
     weight: null
     dimensions: 
-      length: ""
+      length: "40"
       width: "40"
       height: "50"
       unit: "cm"
@@ -187,7 +187,7 @@
     on_sale: false
     weight: null
     dimensions: 
-      length: ""
+      length: "70"
       width: "70"
       height: "50"
       unit: "cm"
