--- a/_data/obres/poetesferitsobrajordipages.yml
+++ b/_data/obres/poetesferitsobrajordipages.yml
@@ -31,7 +31,7 @@
     on_sale: false
     weight: null
     dimensions: 
-      length: ""
+      length: "40"
       width: "40"
       height: "50"
       unit: "cm"
