Canviada imatge bg intro i refet text sobre.

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink:        pretty
 # Site settings
 title: 'Jordi Pagès'
 email: rgil@oxygen.cat
-description: 'Jordi Pagès és un artista de Granollers (1951) amb una forta empremta a Cadaqués.'
+description: 'Rrose Sélavy et / nous esquivons / les ecchymoses / des esquimaux / aux mots exquis'
 baseurl:
 url: "https://www.jordipages.cat" 
 twitter_username: freecates
