--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink:        pretty
 # Site settings
 title: 'Jordi Pagès'
 email: rgil@oxygen.cat
-description: 'Rrose Sélavy et / nous esquivons / les ecchymoses / des esquimaux / aux mots exquis'
+description: 'Rrose Sélavy et / nous esquivons / les ecchymoses / des esquimaux / aux mots exquis (M. Duchamp)'
 baseurl:
 url: "https://www.jordipages.cat" 
 twitter_username: freecates
