Afegida la variable site.subdescription per millorar el SEO.

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ permalink:        pretty
 # Site settings
 title: 'Jordi Pagès'
 email: rgil@oxygen.cat
-description: 'Rrose Sélavy et / nous esquivons / les ecchymoses / des esquimaux / aux mots exquis (M. Duchamp)'
+description: 'Jordi Pagès (1951) és un artista de Granollers molt vinculat a Cadaqués, on també hi té estudi, amb una llarga trajectòria artística.'
+subdescription: 'Rrose Sélavy et / nous esquivons / les ecchymoses / des esquimaux / aux mots exquis (M. Duchamp)'
 baseurl:
 url: "https://www.jordipages.cat" 
 twitter_username: freecates
