passades les url a localhost.

--- a/_data/obres/completaobrajordipages.yml
+++ b/_data/obres/completaobrajordipages.yml
@@ -63,11 +63,11 @@
         id: 3977
         created_at: "2015-01-16T13:51:45Z"
         updated_at: "2015-01-16T13:51:45Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
+        src: "/images/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
         title: "3.Jordi-Pagès .-Collage(s)  Sèrie Gabriel Ferrater.  Els miralls"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
+    featured_src: "/images/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -141,11 +141,11 @@
         id: 3975
         created_at: "2015-01-16T13:46:53Z"
         updated_at: "2015-01-16T13:46:53Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
+        src: "/images/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
         title: "2. Jordi-Pagès-  Collage(s)-Sèrie Gabriel-Ferrater- Architettura"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
+    featured_src: "/images/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -219,11 +219,11 @@
         id: 3973
         created_at: "2015-01-16T13:44:22Z"
         updated_at: "2015-01-16T13:44:22Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
+        src: "/images/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
         title: "1.Jordi-Pagès- Collage(s)-Sèrie Gabriel-Ferrater-Les-dones."
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
+    featured_src: "/images/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -297,11 +297,11 @@
         id: 3967
         created_at: "2015-01-16T13:28:15Z"
         updated_at: "2015-01-16T13:28:15Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.-Jordi-Pagés-Collage-Cap-al-no-res.jpg"
+        src: "/images/3.-Jordi-Pagés-Collage-Cap-al-no-res.jpg"
         title: "3. Jordi-Pagés-Collage-Cap-al-no-res"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.-Jordi-Pagés-Collage-Cap-al-no-res.jpg"
+    featured_src: "/images/3.-Jordi-Pagés-Collage-Cap-al-no-res.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -375,11 +375,11 @@
         id: 3965
         created_at: "2015-01-16T13:26:16Z"
         updated_at: "2015-01-16T13:26:16Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.-Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa.jpg"
+        src: "/images/2.-Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa.jpg"
         title: "2. Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.-Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa.jpg"
+    featured_src: "/images/2.-Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -453,11 +453,11 @@
         id: 3963
         created_at: "2015-01-16T13:23:48Z"
         updated_at: "2015-01-16T13:23:48Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.-Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses.jpg"
+        src: "/images/1.-Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses.jpg"
         title: "1. Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.-Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses.jpg"
+    featured_src: "/images/1.-Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -531,11 +531,11 @@
         id: 3961
         created_at: "2015-01-16T13:18:29Z"
         updated_at: "2015-01-16T13:18:29Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
+        src: "/images/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
         title: "9..Jordi-Pagés-Collage-Obrim-el-cos."
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
+    featured_src: "/images/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -609,11 +609,11 @@
         id: 3959
         created_at: "2015-01-16T13:15:47Z"
         updated_at: "2015-01-16T13:15:47Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
+        src: "/images/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
         title: "8.Jordi-Pagés-Collage- Versos de Platja-2"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
+    featured_src: "/images/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -687,11 +687,11 @@
         id: 3957
         created_at: "2015-01-16T09:04:13Z"
         updated_at: "2015-01-16T09:04:13Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
+        src: "/images/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
         title: "7. Jordi-Pagés-Collage-Versos-de-Platja"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
+    featured_src: "/images/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -765,11 +765,11 @@
         id: 3945
         created_at: "2015-01-16T08:47:38Z"
         updated_at: "2015-01-16T08:47:38Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
+        src: "/images/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
         title: "1.Collage-Jordi-Pagés-Versos-de- platja N:1"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
+    featured_src: "/images/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -843,11 +843,11 @@
         id: 3955
         created_at: "2015-01-16T09:02:05Z"
         updated_at: "2015-01-16T09:02:05Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
+        src: "/images/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
         title: "6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost del-somni"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
+    featured_src: "/images/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -921,11 +921,11 @@
         id: 3953
         created_at: "2015-01-16T09:00:08Z"
         updated_at: "2015-01-16T09:00:08Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
+        src: "/images/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
         title: "5.Jordi-Pagès-Collage-Estimo tant-les- paraules"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
+    featured_src: "/images/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -999,11 +999,11 @@
         id: 3951
         created_at: "2015-01-16T08:57:59Z"
         updated_at: "2015-01-16T08:57:59Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
+        src: "/images/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
         title: "4.Jordi-Pagès-Collage-Quan-em va-dir-per-sempre-vaig-veure un-cactus_"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
+    featured_src: "/images/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -1077,11 +1077,11 @@
         id: 3949
         created_at: "2015-01-16T08:55:54Z"
         updated_at: "2015-01-16T08:55:54Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
+        src: "/images/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
         title: "3.Jordi -Pagès-Collage(s)-De-nit omplo-el-rebost del-somni"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
+    featured_src: "/images/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -1155,11 +1155,11 @@
         id: 3947
         created_at: "2015-01-16T08:50:30Z"
         updated_at: "2015-01-16T08:50:30Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
+        src: "/images/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
         title: "2.Jordi-Pagès-Collage-Hi-ha-solituds"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
+    featured_src: "/images/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -1233,11 +1233,11 @@
         id: 4043
         created_at: "2015-01-26T14:27:41Z"
         updated_at: "2015-01-26T14:27:41Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/4.-Jordi-Pagès-Collages-Sèrie-POETESfERITS-.jpeg"
+        src: "/images/4.-Jordi-Pagès-Collages-Sèrie-POETESfERITS-.jpeg"
         title: "4. Jordi Pagès Collage(s)  Sèrie POETESfERITS-"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/4.-Jordi-Pagès-Collages-Sèrie-POETESfERITS-.jpeg"
+    featured_src: "/images/4.-Jordi-Pagès-Collages-Sèrie-POETESfERITS-.jpeg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -1311,11 +1311,11 @@
         id: 4041
         created_at: "2015-01-26T14:25:39Z"
         updated_at: "2015-01-26T14:25:39Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS-Sense-títol.jpg"
+        src: "/images/3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS-Sense-títol.jpg"
         title: "3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS- Sense-títol"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS-Sense-títol.jpg"
+    featured_src: "/images/3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS-Sense-títol.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -1389,11 +1389,11 @@
         id: 4039
         created_at: "2015-01-26T14:24:04Z"
         updated_at: "2015-01-26T14:24:04Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.jpg"
+        src: "/images/2.Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.jpg"
         title: "2.Jordi-Pagés-Sèrie-POETESfERITS- Sense-títol"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.jpg"
+    featured_src: "/images/2.Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -1467,11 +1467,11 @@
         id: 4037
         created_at: "2015-01-26T13:50:41Z"
         updated_at: "2015-01-26T13:50:41Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.-Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.-Collage.jpg"
+        src: "/images/1.-Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.-Collage.jpg"
         title: "1. Jordi-Pagés-Sèrie-POETESfERITS- Sense-títol. Collage"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.-Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.-Collage.jpg"
+    featured_src: "/images/1.-Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.-Collage.jpg"
     attributes: []
     downloads: []
     download_limit: 0
