--- a/_data/obres/busquetobrajordipages.yml
+++ b/_data/obres/busquetobrajordipages.yml
@@ -63,11 +63,11 @@
         id: 3961
         created_at: "2015-01-16T13:18:29Z"
         updated_at: "2015-01-16T13:18:29Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
+        src: "/images/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
         title: "9..Jordi-Pagés-Collage-Obrim-el-cos."
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
+    featured_src: "/images/9..Jordi-Pagés-Collage-Obrim-el-cos..jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -141,11 +141,11 @@
         id: 3959
         created_at: "2015-01-16T13:15:47Z"
         updated_at: "2015-01-16T13:15:47Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
+        src: "/images/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
         title: "8.Jordi-Pagés-Collage- Versos de Platja-2"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
+    featured_src: "/images/8.Jordi-Pagés-Collage-Versos-de-Platja-2.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -219,11 +219,11 @@
         id: 3957
         created_at: "2015-01-16T09:04:13Z"
         updated_at: "2015-01-16T09:04:13Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
+        src: "/images/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
         title: "7. Jordi-Pagés-Collage-Versos-de-Platja"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
+    featured_src: "/images/7.-Jordi-Pagés-Collage-Versos-de-Platja.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -297,11 +297,11 @@
         id: 3945
         created_at: "2015-01-16T08:47:38Z"
         updated_at: "2015-01-16T08:47:38Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
+        src: "/images/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
         title: "1.Collage-Jordi-Pagés-Versos-de- platja N:1"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
+    featured_src: "/images/1.Collage-Jordi-Pagés-Versos-de-platja-N1-.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -375,11 +375,11 @@
         id: 3955
         created_at: "2015-01-16T09:02:05Z"
         updated_at: "2015-01-16T09:02:05Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
+        src: "/images/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
         title: "6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost del-somni"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
+    featured_src: "/images/6.Jordi-Pagès-Collage-De-nit-omplo-el-rebost-del-somni.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -453,11 +453,11 @@
         id: 3953
         created_at: "2015-01-16T09:00:08Z"
         updated_at: "2015-01-16T09:00:08Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
+        src: "/images/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
         title: "5.Jordi-Pagès-Collage-Estimo tant-les- paraules"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
+    featured_src: "/images/5.Jordi-Pagès-Collage-Estimo-tant-les-paraules.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -531,11 +531,11 @@
         id: 3951
         created_at: "2015-01-16T08:57:59Z"
         updated_at: "2015-01-16T08:57:59Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
+        src: "/images/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
         title: "4.Jordi-Pagès-Collage-Quan-em va-dir-per-sempre-vaig-veure un-cactus_"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
+    featured_src: "/images/4.Jordi-Pagès-Collage-Quan-em-va-dir-per-sempre-vaig-veure-un-cactus_.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -609,11 +609,11 @@
         id: 3949
         created_at: "2015-01-16T08:55:54Z"
         updated_at: "2015-01-16T08:55:54Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
+        src: "/images/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
         title: "3.Jordi -Pagès-Collage(s)-De-nit omplo-el-rebost del-somni"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
+    featured_src: "/images/3.Jordi-Pagès-Collages-De-nit-omplo-el-rebost-del-somni.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -687,11 +687,11 @@
         id: 3947
         created_at: "2015-01-16T08:50:30Z"
         updated_at: "2015-01-16T08:50:30Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
+        src: "/images/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
         title: "2.Jordi-Pagès-Collage-Hi-ha-solituds"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
+    featured_src: "/images/2.Jordi-Pagès-Collage-Hi-ha-solituds-.jpg"
     attributes: []
     downloads: []
     download_limit: 0
