--- a/_data/obres/ferraterobrajordipages.yml
+++ b/_data/obres/ferraterobrajordipages.yml
@@ -63,11 +63,11 @@
         id: 3977
         created_at: "2015-01-16T13:51:45Z"
         updated_at: "2015-01-16T13:51:45Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
+        src: "/images/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
         title: "3.Jordi-Pagès .-Collage(s)  Sèrie Gabriel Ferrater.  Els miralls"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
+    featured_src: "/images/3.Jordi-Pagès-.-Collages-Sèrie-Gabriel-Ferrater.-Els-miralls.jpeg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -141,11 +141,11 @@
         id: 3975
         created_at: "2015-01-16T13:46:53Z"
         updated_at: "2015-01-16T13:46:53Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
+        src: "/images/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
         title: "2. Jordi-Pagès-  Collage(s)-Sèrie Gabriel-Ferrater- Architettura"
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
+    featured_src: "/images/2.-Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Architettura.jpeg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -219,11 +219,11 @@
         id: 3973
         created_at: "2015-01-16T13:44:22Z"
         updated_at: "2015-01-16T13:44:22Z"
-        src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
+        src: "/images/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
         title: "1.Jordi-Pagès- Collage(s)-Sèrie Gabriel-Ferrater-Les-dones."
         alt: ""
         position: 0
-    featured_src: "http://www.artinpocket.cat/wp-content/uploads/2015/01/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
+    featured_src: "/images/1.Jordi-Pagès-Collages-Sèrie-Gabriel-Ferrater-Les-dones.-.jpeg"
     attributes: []
     downloads: []
     download_limit: 0
