--- a/_data/obres/vinyoliobrajordipages.yml
+++ b/_data/obres/vinyoliobrajordipages.yml
@@ -63,11 +63,11 @@
         id: 3967
         created_at: "2015-01-16T13:28:15Z"
         updated_at: "2015-01-16T13:28:15Z"
-        src: "/images/3.-Jordi-Pagés-Collage-Cap-al-no-res.jpg"
+        src: "/images/3-jordi-pages-collage-cap-al-no-res.jpg"
         title: "3. Jordi-Pagés-Collage-Cap-al-no-res"
         alt: ""
         position: 0
-    featured_src: "/images/3.-Jordi-Pagés-Collage-Cap-al-no-res.jpg"
+    featured_src: "/images/3-jordi-pages-collage-cap-al-no-res.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -141,11 +141,11 @@
         id: 3965
         created_at: "2015-01-16T13:26:16Z"
         updated_at: "2015-01-16T13:26:16Z"
-        src: "/images/2.-Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa.jpg"
+        src: "/images/2-jordi-pages-collage-en-la-silent-i-la-closa-nit-rocosa.jpg"
         title: "2. Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa"
         alt: ""
         position: 0
-    featured_src: "/images/2.-Jordi-Pagés-Collage-En-la-silent-i-la-closa-nit-rocosa.jpg"
+    featured_src: "/images/2-jordi-pages-collage-en-la-silent-i-la-closa-nit-rocosa.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -219,11 +219,11 @@
         id: 3963
         created_at: "2015-01-16T13:23:48Z"
         updated_at: "2015-01-16T13:23:48Z"
-        src: "/images/1.-Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses.jpg"
+        src: "/images/1-jordi-pages-pintura-collage-es-poden-fer-moltes-coses.jpg"
         title: "1. Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses"
         alt: ""
         position: 0
-    featured_src: "/images/1.-Jordi-Pagés-Pintura-Collage-Es-poden-fer-moltes-coses.jpg"
+    featured_src: "/images/1-jordi-pages-pintura-collage-es-poden-fer-moltes-coses.jpg"
     attributes: []
     downloads: []
     download_limit: 0
