--- a/_data/obres/poetesferitsobrajordipages.yml
+++ b/_data/obres/poetesferitsobrajordipages.yml
@@ -63,11 +63,11 @@
         id: 4043
         created_at: "2015-01-26T14:27:41Z"
         updated_at: "2015-01-26T14:27:41Z"
-        src: "/images/4.-Jordi-Pagès-Collages-Sèrie-POETESfERITS-.jpeg"
+        src: "/images/4-jordi-pages-collages-serie-poetesferits.jpg"
         title: "4. Jordi Pagès Collage(s)  Sèrie POETESfERITS-"
         alt: ""
         position: 0
-    featured_src: "/images/4.-Jordi-Pagès-Collages-Sèrie-POETESfERITS-.jpeg"
+    featured_src: "/images/4-jordi-pages-collages-serie-poetesferits.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -141,11 +141,11 @@
         id: 4041
         created_at: "2015-01-26T14:25:39Z"
         updated_at: "2015-01-26T14:25:39Z"
-        src: "/images/3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS-Sense-títol.jpg"
+        src: "/images/3-jordi-pages-collage-triptic-serie-poetesferits-sense-títol.jpg"
         title: "3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS- Sense-títol"
         alt: ""
         position: 0
-    featured_src: "/images/3.Jordi-Pagés-Collage-Tríptic-Sèrie-POETESfERITS-Sense-títol.jpg"
+    featured_src: "/images/3-jordi-pages-collage-triptic-serie-poetesferits-sense-títol.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -219,11 +219,11 @@
         id: 4039
         created_at: "2015-01-26T14:24:04Z"
         updated_at: "2015-01-26T14:24:04Z"
-        src: "/images/2.Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.jpg"
+        src: "/images/2-jordi-pages-serie-poetesferits-sense-titol.jpg"
         title: "2.Jordi-Pagés-Sèrie-POETESfERITS- Sense-títol"
         alt: ""
         position: 0
-    featured_src: "/images/2.Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.jpg"
+    featured_src: "/images/2-jordi-pages-serie-poetesferits-sense-titol.jpg"
     attributes: []
     downloads: []
     download_limit: 0
@@ -297,11 +297,11 @@
         id: 4037
         created_at: "2015-01-26T13:50:41Z"
         updated_at: "2015-01-26T13:50:41Z"
-        src: "/images/1.-Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.-Collage.jpg"
+        src: "/images/1-jordi-pages-serie-poetesferits-sense-títol-collage.jpg"
         title: "1. Jordi-Pagés-Sèrie-POETESfERITS- Sense-títol. Collage"
         alt: ""
         position: 0
-    featured_src: "/images/1.-Jordi-Pagés-Sèrie-POETESfERITS-Sense-títol.-Collage.jpg"
+    featured_src: "/images/1-jordi-pages-serie-poetesferits-sense-títol-collage.jpg"
     attributes: []
     downloads: []
     download_limit: 0
